Prevent overflow.

--- a/src/mdi/grid/grid.css
+++ b/src/mdi/grid/grid.css
@@ -76,6 +76,21 @@
   background: #737E9E;
 }
 
+[part~=grid]::-webkit-scrollbar {
+  width: 1em;
+}
+
+[part~=grid]::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  border-radius: 0.25rem;
+}
+
+[part~=grid]::-webkit-scrollbar-thumb {
+  background-color: #453C4F;
+  outline: 1px solid slategrey;
+  border-radius: 0.25rem;
+}
+
 [part~=contextMenu] {
   position: absolute;
   background: #737E9E;
